8334546: [lworld] C2: Calling clone() on non-allocated inline types fails with "Should have been buffered"